# Academic-Research-Assistant

./: pyproject.toml
app/: machinelearning.csv  main.py
